--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
   width:98vw;
 height:80vh;
   border-radius:10px;
-  content:"h";
+  content:" ";
   background-position: 0px center;
   background-image:url('/image_search_1731758988483.jpg');
   position:absolute;
