--- a/style.css
+++ b/style.css
@@ -175,6 +175,9 @@ border-color:transparent;
   box-sizing: border-box;
   padding:0px;
 }
+.icons a{
+  text-decoration:none;
+}
 .icons svg{
   fill:var(--mainColor);
   width:50px;
